fix overflow, padding, placeholder filepaths

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -17,7 +17,7 @@
 // featured
 .featured {
   margin-top: 4rem;
-  width: 100vw;
+  width: 100%;
   display: flex;
   flex-direction: column;
   gap: 2rem;
