--- a/styles/MobileSearch.module.scss
+++ b/styles/MobileSearch.module.scss
@@ -1,7 +1,7 @@
 @use "./colors.scss" as color;
 
 .page {
-  width: 100vw;
+  width: 100%;
   min-height: 100vh;
   padding-top: 5rem;
   left: 0;
