--- a/styles/ProductList.module.scss
+++ b/styles/ProductList.module.scss
@@ -5,6 +5,7 @@
 .category_page {
   display: flex;
   flex-direction: column;
+  padding-top: 3.5rem;
 
   > * {
     padding: 1rem 0rem;
@@ -204,6 +205,12 @@
   height: 1rem;
   border-radius: 2rem;
   border: solid 1px rgba(0, 0, 0, 0.35);
+}
+
+@media only screen and (min-width: 550px) {
+  .category_page {
+    padding-top: 0;
+  }
 }
 
 @media only screen and (min-width: 700px) {
