--- a/styles/Search.module.scss
+++ b/styles/Search.module.scss
@@ -7,8 +7,10 @@
 .overlay {
   position: absolute;
   width: 100vw;
+  width: 100%;
   min-height: 200vh;
   top: 3.5rem;
+  padding-top: 4rem;
   left: 0;
   background-color: color.$white;
   z-index: -1;
@@ -67,7 +69,7 @@
 
   .closeButton {
     position: absolute;
-    top: 1rem;
+    top: 3rem;
     right: 2rem;
     width: 2rem;
     height: 2rem;
